# ksaneplugin

./: CMakeLists.txt  Messages.sh  ksane_scan_service.desktop  sanedialog.cpp  sanedialog.h  scanservice.desktop
